Implemented deep transitive dependency scanning based on maven/gradle dependency tree